--- a/HTML Website for DOM/style2.css
+++ b/HTML Website for DOM/style2.css
@@ -128,3 +128,64 @@ header{
     font-size: 1.8rem;
 }
 
+
+
+/* ////////////////////Somthing About You///////////////////// */
+
+.insection{
+    border: 2px solid blue;
+    text-align: center;
+    margin-top: 4em;
+    display: flex;
+    height: 130px;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.input-btn{
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border: 2px solid red;
+}
+
+.input-btn input{
+    height: 40px;
+    width: 50%;
+    font-size: 1rem;
+    padding: 1em;
+    transition: all 0.3s ease-in-out;
+}
+
+.input-btn input:hover{
+    height: 45px;
+    width: 52%;
+}
+
+.input-btn a{
+    text-decoration: none;
+    color: aliceblue;
+    font-size: 1.5rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    border-radius: 29em;
+    border: 2px solid rgb(114, 112, 255);
+    padding: 0 30px;
+    transition: all 0.3s ease-in-out;
+}
+
+.input-btn a:hover{
+    border: none;
+    font-size: 20px;
+    background-image: linear-gradient( 288deg,  rgba(0,85,255,1) 1.5%, rgba(4,56,115,1) 91.6% );
+}
+
+.buythings{
+    border: 2px solid black;
+    font-size: 1.9rem;
+    font-weight: 400;
+    color: aliceblue;
+}
+
